Day 15 2019 convert Point to Loc